[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/TileSet.tres" type="TileSet" id=1]
[ext_resource path="res://World.gd" type="Script" id=2]
[ext_resource path="res://entities/tank/tank.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/enemyspawner/EnemySpawner.tscn" type="PackedScene" id=4]
[ext_resource path="res://entities/baseflag/baseflag.tscn" type="PackedScene" id=5]

[node name="World" type="Node2D"]
script = ExtResource( 2 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( 0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 5, 1, 0, 6, 1, 0, 7, 1, 0, 8, 1, 0, 9, 1, 0, 10, 1, 0, 11, 1, 0, 12, 1, 0, 13, 1, 0, 14, 1, 0, 15, 1, 0, 16, 1, 0, 17, 1, 0, 18, 1, 0, 19, 1, 0, 20, 1, 0, 21, 1, 0, 22, 1, 0, 23, 1, 0, 24, 1, 0, 25, 1, 0, 26, 1, 0, 27, 1, 0, 28, 1, 0, 29, 1, 0, 30, 1, 0, 31, 1, 0, 32, 1, 0, 33, 1, 0, 34, 1, 0, 35, 1, 0, 36, 1, 0, 37, 1, 0, 38, 1, 0, 39, 1, 0, 40, 1, 0, 41, 1, 0, 65536, 1, 0, 65577, 1, 0, 131072, 1, 0, 131113, 1, 0, 196608, 1, 0, 196649, 1, 0, 262144, 1, 0, 262156, 2, 0, 262157, 2, 0, 262185, 1, 0, 327680, 1, 0, 327692, 2, 0, 327693, 2, 0, 327721, 1, 0, 393216, 1, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393257, 1, 0, 458752, 1, 0, 458771, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 458793, 1, 0, 524288, 1, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524329, 1, 0, 589824, 1, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589865, 1, 0, 655360, 1, 0, 655377, 1, 0, 655378, 1, 0, 655401, 1, 0, 720896, 1, 0, 720913, 1, 0, 720914, 1, 0, 720937, 1, 0, 786432, 1, 0, 786473, 1, 0, 851968, 1, 0, 851990, 3, 0, 851991, 3, 0, 851992, 3, 0, 851993, 3, 0, 851994, 3, 0, 851995, 3, 0, 851996, 3, 0, 851997, 3, 0, 851998, 3, 0, 851999, 3, 0, 852000, 3, 0, 852001, 3, 0, 852002, 3, 0, 852003, 3, 0, 852004, 3, 0, 852005, 3, 0, 852006, 3, 0, 852007, 3, 0, 852008, 3, 0, 852009, 1, 0, 917504, 1, 0, 917526, 3, 0, 917527, 3, 0, 917528, 3, 0, 917529, 3, 0, 917530, 3, 0, 917531, 3, 0, 917532, 3, 0, 917533, 3, 0, 917534, 3, 0, 917535, 3, 0, 917536, 3, 0, 917537, 3, 0, 917538, 3, 0, 917539, 3, 0, 917540, 3, 0, 917541, 3, 0, 917542, 3, 0, 917543, 3, 0, 917544, 3, 0, 917545, 1, 0, 983040, 1, 0, 983049, 4, 0, 983050, 4, 0, 983081, 1, 0, 1048576, 1, 0, 1048585, 4, 0, 1048586, 4, 0, 1048617, 1, 0, 1114112, 1, 0, 1114153, 1, 0, 1179648, 1, 0, 1179689, 1, 0, 1245184, 1, 0, 1245225, 1, 0, 1310720, 1, 0, 1310761, 1, 0, 1376256, 1, 0, 1376297, 1, 0, 1441792, 1, 0, 1441833, 1, 0, 1507328, 1, 0, 1507369, 1, 0, 1572864, 1, 0, 1572905, 1, 0, 1638400, 1, 0, 1638401, 1, 0, 1638402, 1, 0, 1638403, 1, 0, 1638404, 1, 0, 1638405, 1, 0, 1638406, 1, 0, 1638407, 1, 0, 1638408, 1, 0, 1638409, 1, 0, 1638410, 1, 0, 1638411, 1, 0, 1638412, 1, 0, 1638413, 1, 0, 1638414, 1, 0, 1638415, 1, 0, 1638416, 1, 0, 1638417, 1, 0, 1638418, 1, 0, 1638419, 1, 0, 1638420, 1, 0, 1638421, 1, 0, 1638422, 1, 0, 1638423, 1, 0, 1638424, 1, 0, 1638425, 1, 0, 1638426, 1, 0, 1638427, 1, 0, 1638428, 1, 0, 1638429, 1, 0, 1638430, 1, 0, 1638431, 1, 0, 1638432, 1, 0, 1638433, 1, 0, 1638434, 1, 0, 1638435, 1, 0, 1638436, 1, 0, 1638437, 1, 0, 1638438, 1, 0, 1638439, 1, 0, 1638440, 1, 0, 1638441, 1, 0 )

[node name="P1" parent="." instance=ExtResource( 3 )]
position = Vector2( 56, 56 )
isPlayer = true

[node name="P2" parent="." instance=ExtResource( 3 )]
position = Vector2( 56, 96 )
tank_color = 1
isPlayer = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 165, 100 )
current = true
zoom = Vector2( 0.35, 0.4 )

[node name="EnemySpawner" parent="." instance=ExtResource( 4 )]
position = Vector2( 272, 24 )

[node name="EnemySpawner2" parent="." instance=ExtResource( 4 )]
position = Vector2( 56, 24 )

[node name="EnemySpawner3" parent="." instance=ExtResource( 4 )]
position = Vector2( 168, 24 )

[node name="BaseFlag" parent="." instance=ExtResource( 5 )]
position = Vector2( 136, 136 )
